<resources>
    <string name="app_name">Quiz App</string>
    <string name="next_question">Next Question</string>
    <string name="quizz">Quizz</string>
    <string name="a">A)</string>
    <string name="b">B)</string>
    <string name="option_1">Option 1</string>
    <string name="c">C)</string>
    <string name="d">D)</string>
    <string name="option_2">Option 2</string>
    <string name="option_4">Option 4</string>
    <string name="option_3">Option 3</string>
    <string name="msg">msg</string>
</resources>