<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quizz"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="334dp"
        android:layout_height="119dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="38dp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="99dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/option_1"
        android:textAlignment="viewStart"
        android:textColor="#455A64"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="99dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/option_3"
        android:textAlignment="viewStart"
        android:textColor="#455A64"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="99dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/option_2"
        android:textAlignment="viewStart"
        android:textColor="#455A64"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="99dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/option_4"
        android:textAlignment="viewStart"
        android:textColor="#455A64"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="129dp"
        android:text="@string/next_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <TextView
        android:id="@+id/tvMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="179dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="23dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="285dp"
        android:layout_height="266dp"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>